--- a/client/src/components/MainPage.css
+++ b/client/src/components/MainPage.css
@@ -1,6 +1,5 @@
 h1{
-  color: rgb(255, 60, 0);
-  background: brown;
+  color:blue;
   text-align: center;
 }
 span{
@@ -80,7 +79,7 @@ span{
   display: flex;
   flex-direction: column;
 }
-#forms{
+.forms{
   width: 100px;
   font-size: 20px;
 }
