--- a/client/src/components/Password.css
+++ b/client/src/components/Password.css
@@ -21,5 +21,5 @@ a {
     text-decoration: none;
     color:blue;
     box-shadow: 0 0 2px 1px #BDBDBD;
-    background: linear-gradient(180deg, #FCFFE6 50%, #E6E6E6 100%); 
+    /* background:  #FCFFE6 ;  */
     }
