--- a/client/src/components/Password.css
+++ b/client/src/components/Password.css
@@ -11,6 +11,12 @@ input{
 
 .button{
     text-align: center;
+    padding: 20px;
+    background: teal;
+    border-radius: 5px;
+    width: fit-content;
+    margin: 20px auto;
+    cursor: pointer;
 }
 a {
     border: 1px solid black;
