--- a/client/src/components/Password.css
+++ b/client/src/components/Password.css
@@ -1,15 +1,33 @@
-h1{
-    color:blue;
-}
-.flexContainer{
-    display:flex;
-    justify-content: center;
-}
-input{
-    width: 20vw;
+h1 {
+    color: blue;
 }
 
-.button{
+.flexContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    direction: ltr;
+}
+
+.flexContainer>form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    margin: auto;
+}
+
+.flexContainer>form>input {
+    width: 250px;
+    border: 0px solid;
+    border-bottom: 1px solid gray;
+    margin-bottom: 10px;
+    margin-top: 3px;
+    padding: 7px;
+    border-radius: 3px 3px 0px 0px;
+}
+
+.button {
     text-align: center;
     padding: 20px;
     background: teal;
@@ -17,15 +35,26 @@ input{
     width: fit-content;
     margin: 20px auto;
     cursor: pointer;
+    border: none;
+    color: white;
+    text-transform: uppercase;
 }
+
 a {
     border: 1px solid black;
     padding: 10px 15px;
     margin: 20px;
-
     display: inline-block;
     text-decoration: none;
-    color:blue;
+    color: blue;
     box-shadow: 0 0 2px 1px #BDBDBD;
     /* background:  #FCFFE6 ;  */
-    }
+}
+
+.errorMsg {
+    background: #ffff0087;
+    padding: 6px;
+    border-radius: 6px;
+    color: #cc522b;
+    
+}
