there is login and register

--- a/client/src/components/Password.css
+++ b/client/src/components/Password.css
@@ -38,6 +38,13 @@ h1 {
     border: none;
     color: white;
     text-transform: uppercase;
+    margin: 0px 8px;
+}
+
+.secondButton {
+    background: white;
+    color: rgba(0, 0, 0, 0.842);
+    border: 1px solid rgba(0, 0, 0, 0.842);
 }
 
 a {
@@ -56,5 +63,4 @@ a {
     padding: 6px;
     border-radius: 6px;
     color: #cc522b;
-    
 }
