menu read from server

--- a/client/src/components/Password.css
+++ b/client/src/components/Password.css
@@ -47,16 +47,17 @@ h1 {
     border: 1px solid rgba(0, 0, 0, 0.842);
 }
 
-a {
-    border: 1px solid black;
+/* a { */
+    /* border: 1px solid black;
     padding: 10px 15px;
     margin: 20px;
     display: inline-block;
     text-decoration: none;
     color: blue;
-    box-shadow: 0 0 2px 1px #BDBDBD;
+    box-shadow: 0 0 2px 1px #BDBDBD; */
     /* background:  #FCFFE6 ;  */
-}
+
+/* } */
 
 .errorMsg {
     background: #ffff0087;
