--- a/client/src/components/Admin/Table.css
+++ b/client/src/components/Admin/Table.css
@@ -21,3 +21,40 @@ td {
 .tableEmail {
     word-break: break-all;
 }
+
+.adminBtn {
+    font-size: 0.7rem;
+    margin: 0px;
+    padding: 2px;
+    width: 60px;
+    height: 40px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0.25;
+}
+
+.adminBtn:hover {
+    opacity: 1;
+}
+
+.adminTdBtn {
+    padding: 1px 2px;
+}
+
+.inputDateTD {
+    padding: 0px;
+    display: flex;
+}
+
+.plusMinusDate {
+    color: white;
+    background: gray;
+    padding: 4px;
+    border-radius: 5px;
+    width: 10px;
+    margin: 8px 4px;
+    cursor: pointer;
+    user-select: none;
+}
